--- a/frontend/auction/src/app/app.component.html
+++ b/frontend/auction/src/app/app.component.html
@@ -17,29 +17,64 @@
   <div class="row">
   <div class="col-sm-6 text-center">
     <h3 class="text-center">
-      Auction Item Input
+      Post Auction Item Input
     </h3>
     <form>
     <div class="form-group">
-      <label for="reservePrice">Reserve Price:</label>
-      <input type="number" class="form-control" id="reservePrice">
+      <label for="auctionItemReservePrice">Reserve Price:</label>
+      <input type="number" class="form-control" id="auctionItemReservePrice">
     </div>
       <div class="form-group">
-        <label for="itemId">Item Id:</label>
-        <input type="number" class="form-control" id="itemId">
+        <label for="auctionItemItemId">Item Id:</label>
+        <input type="number" class="form-control" id="auctionItemItemId">
       </div>
       <div class="form-group">
-        <label for="description">Description:</label>
-        <input type="text" class="form-control" id="description">
+        <label for="auctionItemDescription">Description:</label>
+        <input type="text" class="form-control" id="auctionItemDescription">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
   </div>
     <div class="col-sm-6 text-center">
       <h3 class="text-center">
-        Auction Item Output
+        Post Auction Item Output
       </h3>
       <div id="postAuctionItemOutput">
+
+      </div>
+    </div>
+  </div>
+  <div class="row text-center">
+      <h3 class="text-center">
+        Get Auction Item Input
+      </h3>
+      <form>
+        <div class="form-group">
+          <label for="getAuctionItemId">Item Id:</label>
+          <input type="number" class="form-control" id="getAuctionItemId">
+        </div>
+        <button type="submit" class="btn btn-default">Get</button>
+      </form>
+      <input type="button" value="Get All" (click)="getAllAuctionItems()" />
+    </div>
+  <div class="row">
+    <div class="text-center">
+      <h3 class="text-center">
+        Auction Item Output
+      </h3>
+      <p>
+        {{auctionItems.status}}
+      </p>
+      <p *ngFor="let result of auctionItems.result">
+        Auction ItemId: {{result.auctionItemId}}
+        Reserve Price: {{result.reservePrice}}
+        Current Bid: {{result.currentBid}}
+        Max Auto Bid: {{result.maxAutoBidAmount}}
+        Item Id: {{result.item.itemId}}
+        Item Description: {{result.item.description}}
+        Bidder Name: {{result.bidderName}}
+      </p>
+      <div id="getAuctionItemOutput">
 
       </div>
     </div>
