--- a/frontend/auction/src/app/app.component.html
+++ b/frontend/auction/src/app/app.component.html
@@ -11,10 +11,11 @@
 <h1 class="text-center">
   {{title}}
 </h1>
+  <hr>
 </div>
 
 <div class="row">
-  <div class="row">
+  <div id="postAuctionItemInput" class="row">
   <div class="col-sm-6 text-center">
     <h3 class="text-center">
       Post Auction Item Input
@@ -35,11 +36,11 @@
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
   </div>
-    <div class="col-sm-6 text-center">
+    <div id="postAuctionItemOutput" class="col-sm-6 text-center">
       <h3 class="text-center">
         Post Auction Item Output
       </h3>
-      <div id="postAuctionItemOutput">
+      <div id="postAuctionItemOutputContent">
 
       </div>
     </div>
@@ -47,19 +48,26 @@
 </div>
 
 <div class="form-group row text-center">
-  <div class="col-xs-2">
+  <hr>
+  <div class="col-sm-4">
+  </div>
+  <div class="col-sm-4">
       <h3 class="text-center">
         Get Auction Item Input
       </h3>
     <label for="getAuctionItemId">Item Id:</label>
     <input type="number" class="form-control" id="getAuctionItemId" #getAuctionIdNg>
+    <br>
     <input type="button" value="Get" class="btn btn-default" (click)="getAuctionItems(getAuctionIdNg.value)"/>
     <input type="button" value="Get All" class="btn btn-default" (click)="getAllAuctionItems()" />
+  </div>
+  <div class="col-sm-4">
   </div>
 </div>
 
 <div class="row">
     <div>
+      <hr>
       <h3 class="text-center">
         Auction Item Output
       </h3>
