--- a/frontend/auction/src/app/app.component.html
+++ b/frontend/auction/src/app/app.component.html
@@ -26,7 +26,7 @@
           </h3>
           <div class="form-group">
             <label for="auctionItemReservePrice">Reserve Price:</label>
-            <input type="number" step="0.01" class="form-control" id="auctionItemReservePrice"
+            <input type="number" value="1" min="1" class="form-control" id="auctionItemReservePrice"
                    [(ngModel)]="postAuctionItemsReservePrice">
           </div>
           <div class="form-group">
@@ -118,6 +118,15 @@
         <h3 class="text-center">
           Bid Input
         </h3>
+
+        <label for="bidderNameSelect" style="margin-right">Choose a bidder:</label>
+        <br>
+        <select id="bidderNameSelect" (change) = "bidderChanged($event)" [(ngModel)]="bidderName">
+          <option [ngValue]="undefined" disabled>Select An Option</option>
+          <option *ngFor="let name of bidderNames">{{name}}</option>
+        </select>
+        <hr>
+
         <label for="postBidAuctionItemId">Auction Item Id:</label>
         <input type="number" class="form-control" id="postBidAuctionItemId"
                [(ngModel)]="postBidsRequest.auctionItemId">
@@ -126,12 +135,11 @@
         <input type="number" class="form-control" id="postBidMaxAutoBidAmount"
                [(ngModel)]="postBidsRequest.maxAutoBidAmount">
         <br>
-
-        <label for="postBidBidderName">Bidder Name:</label>
+        <!--
         <input type="text" class="form-control" id="postBidBidderName"
-               [(ngModel)]="postBidsRequest.bidderName">
+               [(ngModel)]="postBidsRequest.bidderName">-->
         <br>
-        <input type="button" value="Post Bid" class="btn btn-default" (click)="postBid()" style="margin: 5px"/>
+        <input type="button" value="Post Bid" class="btn btn-default" (click)="postBid()" style="margin-bottom: 5px"/>
       </div>
 
       <div class="row col-sm-6 text-center" id="postBidsDivOutput">
