--- a/frontend/auction/src/app/app.component.html
+++ b/frontend/auction/src/app/app.component.html
@@ -15,8 +15,28 @@
 
 <div id="background" style="background-color: gainsboro;">
 
-  <div id="content" class="container-fluid" style="margin-left: 2%; margin-right: 2%; padding-left:5%; padding-right:5%;
-  background-color: white;">
+  <div [hidden]="isAuthenticated()" id="login" class="container-fluid"
+       style="margin-left: 2%; margin-right: 2%; padding-left:5%; padding-right:5%; background-color: white;">
+
+    <div class="alert alert-danger" [hidden]="isNoLoginError()">
+      There was a problem logging in. Please try again.
+    </div>
+    <form role="form" (submit)="login()">
+      <div class="form-group">
+        <label for="username">Username:</label> <input type="text"
+                                                       class="form-control" id="username" name="username" [(ngModel)]="username"/>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label> <input type="password"
+                                                       class="form-control" id="password" name="password" [(ngModel)]="password"/>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+  </div>
+
+  <div [hidden]="!isAuthenticated()" id="content" class="container-fluid"
+       style="margin-left: 2%; margin-right: 2%; padding-left:5%; padding-right:5%; background-color: white;">
 
     <div class="row">
       <div id="postAuctionItemInput" class="row">
